# preoop

lab_1/: main.cpp  robots.h
lab_10/: main.cpp  makefile  output.txt  pasture.cpp  pasture.h
lab_11/: legendre.h  main.cpp  output.txt  polynomial.cpp  polynomial.h
lab_2/: binaryarr.cpp  binaryarr.h  main.cpp  strings.cpp  strings.h  xorcipher.cpp  xorcipher.h  xorop.cpp  xorop.h
lab_3/: del_fvectors.cpp  del_fvectors.h  fourvector.cpp  fourvector.h  func_fvect.cpp  func_fvect.h  main.cpp  makefile
lab_4/: main.cpp  mylist.cpp  mylist.h  planet.cpp  planet.h
lab_5/: coin.cpp  coin.h  main.cpp  makefile  moneybox.cpp  moneybox.h  output.txt
lab_6/: coin.cpp  coin.h  main.cpp  node.cpp  node.h  ouput.txt  stack.cpp  stack.h
lab_7/: car.cpp  car.h  cardealer.cpp  cardealer.h  main.cpp  output.txt
lab_8/: CMakeLists.txt  bullet.cpp  bullet.h  main.cpp  rifle.cpp  rifle.h
lab_9/: book.cpp  book.h  books.in  library.cpp  library.h  main.cpp  output.txt
